fix: use base instead of sh

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "workspaces": ["packages/*", "templates/*", "plugins/*", "examples"],
+  "workspaces": [
+    "packages/*",
+    "templates/*",
+    "plugins/*",
+    "examples"
+  ],
   "private": true,
   "author": "ZeroDev",
   "type": "module",
@@ -21,7 +26,7 @@
   "keywords": [],
   "license": "MIT",
   "scripts": {
-    "build": "sh build-all.sh",
+    "build": "bash build-all.sh",
     "format": "biome format . --write",
     "lint": "biome check .",
     "lint:fix": "bun run lint --apply",
